Possible fix for weird vertical alignment

--- a/src/components/InfoGrid/_InfoGrid.less
+++ b/src/components/InfoGrid/_InfoGrid.less
@@ -78,8 +78,8 @@
   }
 
   .InfoGrid-cell-inner {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+//    position: relative;
+//    top: 50%;
+//    transform: translateY(-50%);
   }
 }
